# allegro-hand

./: .gitignore  .travis.yml  README.md  allegro_hand.launch  install_dependencies.bash  install_dependencies.sh  install_gazebo_source.bash  install_gazebo_source.sh  install_gazebo_source2.sh  purge_gazebo.sh
ahand/: CMakeLists.txt  ahand.rviz)  package.xml
ahand/launch/: ahand.launch  hw.launch  real.launch  rqt_plot.launch  rviz.launch  sim.launch
ahand/perspectives/: ahand.rviz  allegro.perspective
ahand_controllers/: CMakeLists.txt  ahand_controllers_plugins.xml  package.xml
ahand_controllers/cfg/: gains_pd_param.cfg  param_pd
ahand_controllers/config/: ahand_controllers.yaml
ahand_controllers/include/ahand_controllers/: ahand_joint_state_controller.h  empty_controller.h  inverse_kinematics.h  joint_impedance_controller.h  pd_controller.h  ros_controller.h  state_publisher.h  task_inverse_kinematics.h
ahand_controllers/include/ahand_controllers/controllers/: ahand_types.h  base_controller.h  bhand_controller.h  joint_impedance_controller.h
ahand_controllers/include/ahand_controllers/motion/: CDDynamics.h
ahand_controllers/include/utils/: filters.h  safety.h  utils.h
ahand_controllers/launch/: load_controller.launch
ahand_controllers/msg/: bhand.msg
ahand_controllers/src/: ahand_joint_state_controller.cpp  empty_controller.cpp  inverse_kinematics.cpp  joint_impedance_controller.cpp  pd_controller.cpp  ros_controller.cpp  state_publisher.cpp  task_inverse_kinematics.cpp
ahand_controllers/src/controllers/: bhand_controller.cpp  joint_impedance_controller.cpp
ahand_controllers/src/motion/: CDDynamics.cpp
ahand_controllers/srv/: Command.srv
ahand_controllers/tests/: test_load.cpp
ahand_description/: CMakeLists.txt  package.xml
ahand_description/launch/: hand_rviz.launch  rviz.rviz
ahand_description/meshes/: allegro_fingerdof1.dae  allegro_fingerdof3.dae  allegro_thumbdof0.dae  base_link.dae  base_link_left.dae  fix_dae.bash  link1.blend  link_0.dae  link_1.dae  link_12_left.dae  link_12_right.dae  link_13.dae  link_14.dae  link_15.0_tip.dae  link_15.dae  link_15_tip.dae  link_2.dae  link_3.0_tip.dae  link_3.dae  link_3_tip.dae  link_4.dae
ahand_description/urdf/: ahand.xacro  ahand_description_right.xacro  ahand_gazebo.xacro  ahand_left.xacro  ahand_right.xacro  allegro_hand.xacro  allegro_hand_description_right.xacro_BACKUP  common.xacro  hand.xacro  hand_gazebo.xacro  tmp.urdf
ahand_description/world/: empty.world  empty_sky.world  empty_world.launch  world.launch
ahand_driver/: CMakeLists.txt  package.xml
ahand_driver/config/: SAH030E046L  SAH030F049R
ahand_driver/example/rockPaperScissors/: CMakeLists.txt
ahand_driver/example/rockPaperScissors/include/rock_paper_scissors/: RockScissorsPaper.h
ahand_driver/example/rockPaperScissors/src/: RockScissorsPaper.cpp  main.cpp
ahand_driver/include/ahand_driver/: ahandDriver.h
ahand_driver/src/: ahandDriver.cpp  canAPI.cpp
ahand_gazebo/: CMakeLists.txt  package.xml
ahand_gazebo/include/ahand_gazebo/: ahand_hw_gazebo.hpp
ahand_gazebo/src/: ahand_hw_gazebo_plugin.cpp
ahand_hw/: CMakeLists.txt  README.md  package.xml
ahand_hw/include/ahand_hw/: ahand_filters.h  ahand_hw.h  ahand_hw_can.hpp  ahand_hw_gazebo.hpp
ahand_hw/src/: ahand_filters.cpp  ahand_hw.cpp  ahand_hw_can_node.cpp  ahand_hw_gazebo_plugin.cpp  ahand_hw_tests.cpp
ahand_parameters/: CMakeLists.txt  package.xml
allegro_hand_controllers/: CMakeLists.txt  CMakeLists.txt.user.c0bcb88.3.3-pre1  allegro_hand_controllers_plugin.xml  package.xml
allegro_hand_controllers/config/: allegro_hand_controllers.yaml
allegro_hand_controllers/include/allegro_hand_controllers/: ahand_joint_state_controller.h  task_inverse_kinematics.h
allegro_hand_controllers/launch/: load_controller.launch
allegro_hand_controllers/launch/controllers/: task_inverse_kinematics.launch  test.launch
allegro_hand_controllers/src/: ahand_joint_state_controller.cpp  task_inverse_kinematics.cpp
allegro_hand_description/: CMakeLists.txt  package.xml
allegro_hand_description/launch/: hand_rviz.launch
allegro_hand_description/meshes/: allegro_fingerdof0.dae  allegro_fingerdof2.dae  allegro_fingertip.dae  allegro_palm_left.dae  allegro_palm_right.dae  allegro_thumbdof3.dae
allegro_hand_description/urdf/: ahand.gv  allegro_hand.urdf  allegro_hand.xacro  allegro_hand_description_right.xacro  allegro_hand_description_right.xacro_BACKUP  allegro_hand_transmission.xacro  common.xacro  hand.xacro  hand_gazebo.xacro  tmp.urdf
allegro_hand_gazebo/: CMakeLists.txt  package.xml
allegro_hand_gazebo/launch/: allegro_hand_only.launch
allegro_hand_gazebo/worlds/: MYROBOT.world
allegro_hand_hw/: CMakeLists.txt  package.xml
allegro_hand_hw/include/ahand_hw/: ahand_hw.h  ahand_hw_gazebo.hpp
allegro_hand_hw/src/: ahand_hw.cpp  ahand_hw_gazebo_plugin.cpp
bhand/: CMakeLists.txt
can_api/: CMakeLists.txt  package.xml
can_api/include/can_api/: canAPI.h
can_api/src/: canAPI.cpp
docs/: README.md
pcan-basic/extras/pcaninfo/: doxygen.Doxyfile
pcan-basic/pcanbasic/: libpcanbasic.so.4
pcan-basic/pcanbasic/src/: libpcanbasic.c  libpcanbasic_legacy.cpp  pcaninfo.c  pcaninfo.h  pcblog.c  pcblog.h  version.h
pcan-basic/pcanjni/: Makefile
pcan-basic/pcanjni/project-documentation/: allclasses-frame.html  allclasses-noframe.html  help-doc.html  index.html  overview-tree.html  serialized-form.html
pcan_basic/: readme.txt  release_notes.txt
pcan_basic/extras/pcaninfo/: Makefile
pcan_basic/pcanbasic/: Makefile  Makefile_latest.mk  Makefile_legacy.mk  PCANBasic.h  libpcanbasic.so.4.2.2
peak-linux-driver/: Makefile
peak-linux-driver/Documentation/: template.c  template.h  template.make
peak-linux-driver/driver/: .cache.mk  .pcan.ko.cmd  .pcan.mod.o.cmd  .pcan.o.cmd  Makefile  lspcan  modules.order  pcan.h  pcan.ko  pcan.mod.c  pcan_make_devices  pcanfd.h  release_notes.txt
peak-linux-driver/lib/: Makefile
peak-linux-driver/test/: Makefile  bitratetest  filtertest  pcan-settings  pcanfdtst  receivetest  transmitest
(+239 files in other folders)
