<?xml version="1.0"?>
<package format="2">
  <name>ahand_hw</name>
  <version>1.0.0</version>
  <description>The ahand_hw package</description>

  <maintainer email="g.dechambrier@ocado.com">Guillaume de Chambrier</maintainer>

  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>control_toolbox</depend>
  <depend>controller_interface</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>hardware_interface</depend>
  <depend>transmission_interface</depend>
  <depend>realtime_tools</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>urdf</depend>
  <depend>cmake_modules</depend>
  <depend>controller_manager</depend>
  <depend>kdl_parser</depend>
  <depend>joint_limits_interface</depend>
  <depend>std_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
  </export>

</package>
