<?xml version="1.0"?>
<package format="2">
  <name>can_api</name>
  <version>1.0.0</version>
  <description>The can api package</description>

  <maintainer email="g.dechambrier@ocado.com">Guillaume de Chambrier</maintainer>

  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <author email="g.dechambrier@ocado.com">Guillaume de Chambrier</author>

  <buildtool_depend>catkin</buildtool_depend>


</package>
